--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -51,6 +51,8 @@ workspace=eDP-1,2
 monitor=HDMI-A-1,1920x1080@60,0x0,1
 workspace=HDMI-A-1,1
  # monitor=DP-2,1920x1080@144,0x0,1
+monitor=,preferred,auto,1
+# monitor=DP-2,1920x1080@144,0x0,1
  # workspace=DP-2,1
  # monitor=DVI-D-1,1920x1080@60,1920x0,1
  # workspace=DVI-D-1,2
@@ -74,7 +76,7 @@ exec-once=~/.config/hypr/scripts/desktop-portals.sh
 #+begin_src conf
 #exec-once=swaybg --output '*' --mode fill --image ~/.config/hypr/wallpapers/wallpaper.png &
 exec-once=swww init
-exec=swww img ~/.config/hypr/wallpapers/livepixelart.gif
+exec=swww img ~/.config/hypr/wallpapers/cold_mountain_art_simplist.jpg
 #+end_src
 
 
@@ -107,13 +109,14 @@ exec-once=blueman-applet
 
 ** Sleep
 #+begin_src conf
-exec-once=swayidle -w timeout 200 scripts/lockscreen
-exec-once=swayidle -w before-sleep scripts/lockscreen
+exec-once=swayidle -w timeout 200 '~/.config/hypr/scripts/lockscreen' before-sleep '~/.config/hypr/scripts/lockscreen'
 #+end_src
 
 ** Polkit
 #+begin_src conf
-exec-once=/usr/lib/polkit-kde-authentication-agent-1
+# exec-once=/usr/lib/polkit-kde-authentication-agent-1
+
+exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
 #+end_src
 
 * INPUT
@@ -147,8 +150,21 @@ general {
     gaps_out=20
 
     border_size=3
-    col.active_border=0xFFB4A1DB
-    col.inactive_border=0xFF343A40
+    # col.active_border=0xFFB4A1DB
+    # col.inactive_border=0xFF343A40
+
+    # Dracula Theme
+    # col.active_border = rgb(bd93f9)
+    # col.inactive_border = rgba(44475aaa)
+    # col.group_border = rgba(282a36dd)
+    # col.group_border_active = rgb(bd93f9)
+
+    # Nord Theme
+    col.active_border = rgb(88c0d0)
+    col.inactive_border = rgba(44475aaa)
+    col.group_border = rgba(282a36dd)
+    col.group_border_active = rgb(88c0d0)
+
     # col.active_border=0xff5e81ac
     # col.inactive_border=0x66333333
 
@@ -168,10 +184,20 @@ the more passes, the more you can up the blur_size without noticing artifacts.
 decoration {
     rounding=12       # Original: rounding=-1
 
-    drop_shadow=true
-    shadow_range=15
-    col.shadow=0xffa7caff
+    # Old
+    # drop_shadow=true
+    # shadow_range=15
+
+    drop_shadow = yes
+    shadow_range = 60
+    shadow_offset = 1 2
+    shadow_render_power = 3
+    shadow_scale = 0.97
+
     col.shadow_inactive=0x50000000
+    # col.shadow=0xffa7caff
+    # Dracula Theme
+    col.shadow = rgba(1E202966)
 
     active_opacity=0.8
     inactive_opacity=0.7
@@ -279,6 +305,7 @@ windowrule=float,xfce4-appfinder
 windowrulev2=float,class:^()$,title:^(Picture in picture)$
 windowrulev2=float,class:^(brave)$,title:^(Save File)$
 windowrulev2=float,class:^(brave)$,title:^(Open File)$
+windowrulev2=float,class:^(brave)$,title:^(Bitwarden)$
 windowrulev2=float,class:^(blueman-manager)$
 windowrulev2=float,class:^(org.twosheds.iwgtk)$
 windowrulev2=float,class:^(blueberry.py)$
@@ -307,8 +334,8 @@ windowrule=animation slide,wlogout
 ** Applications specific
 #+begin_src conf
 windowrule=opacity 0.8 override 0.8,^(Emacs)$
-windowrulev2=opacity 1.0 ,fullscreen:1,class:^(Emacs)$
-windowrule=opacity 1.0,^(Brave-browser)$
+windowrule=opacity 0.8 override 1.0,^(brave)$
+windowrulev2=opacity 1.0,fullscreen:1,class:^(Emacs)$
 #+end_src
 
 * KEYBINDINGS
@@ -329,7 +356,7 @@ $wlogout = ~/.config/hypr/scripts/wlogout
 $colorpicker = ~/.config/hypr/scripts/colorpicker
 #$files = nemo
 $files = files
-$editor = emacs
+$editor = emacsclient -c -n -a 'emacs'
 $browser = brave
 #+end_src
 
@@ -394,7 +421,6 @@ bind=SUPERCTRL,Print,exec,$screenshot --area
 ** Hyprland
 #+begin_src conf
 bind=SUPER,Q,killactive,
-bind=SUPER,C,killactive,
 bind=CTRLALT,Delete,exit,
 bind=SUPER,F,fullscreen,
 bind=SUPER,Space,togglefloating,
@@ -433,9 +459,9 @@ bind=SUPER,E,workspace,2
 bind=SUPER,R,workspace,3
 bind=SUPER,T,workspace,4
 bind=SUPER,Y,workspace,5
-bind=SUPER,U,workspace,6
-bind=SUPER,I,workspace,7
-bind=SUPER,O,workspace,8
+bind=SUPER,7,workspace,6
+bind=SUPER,8,workspace,7
+bind=SUPER,9,workspace,8
 #+end_src
 
 ** Send to Workspaces
