[UP] replace mpc call by playerctl

--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -416,10 +416,10 @@ bind=,XF86AudioRaiseVolume,exec,$volume --inc
 bind=,XF86AudioLowerVolume,exec,$volume --dec
 bind=,XF86AudioMute,exec,$volume --toggle
 bind=,XF86AudioMicMute,exec,$volume --toggle-mic
-bind=,XF86AudioNext,exec,mpc next
-bind=,XF86AudioPrev,exec,mpc prev
-bind=,XF86AudioPlay,exec,mpc toggle
-bind=,XF86AudioStop,exec,mpc stop
+bind=,XF86AudioNext,exec,playerctl next
+bind=,XF86AudioPrev,exec,playerctl previous
+bind=,XF86AudioPlay,exec,playerctl play-pause
+bind=,XF86AudioStop,exec,playerctl stop
 #+end_src
 
 ** Screenshots
