--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -5,6 +5,9 @@
 
 * TABLE OF CONTENT :TOC:
 - [[#output][OUTPUT]]
+  - [[#example][Example]]
+  - [[#homeepitech-setup][Home/Epitech Setup]]
+  - [[#syadem-setup][Syadem Setup]]
 - [[#startup][STARTUP]]
   - [[#desktop-portals][Desktop-Portals]]
   - [[#wallpaper][Wallpaper]]
@@ -54,24 +57,33 @@ If you want to mirror a display, add a ,mirror,[NAME] at the end of the monitor 
 ~monitor=DP-3,1920x1080@60,0x0,1,mirror,DP-2~
 ~monitor=,preferred,auto,1,mirror,DP-1~
 
+** Example
+~monitor=eDP-1,1920x1080@60,0x0,1~
+~monitor=eDP-1,transform,0~
+~monitor=eDP-1,addreserved,10,10,10,10~
+~workspace=eDP-1,1~
+
+** Home/Epitech Setup
 #+begin_src conf
-monitor=eDP-1,1920x1080@60,1920x0,1
-workspace=eDP-1,2
+# monitor=eDP-1,1920x1080@60,1920x0,1
+# workspace=eDP-1,2
+# monitor=HDMI-A-1,preferred,0x0,1
+# workspace=HDMI-A-1,1
 # monitor=HDMI-A-1,1920x1080@60,0x0,1
-monitor=HDMI-A-1,preferred,0x0,1
-workspace=HDMI-A-1,1
 
 # monitor=HDMI-A-1,preferred,auto,1
 # monitor=DP-2,1920x1080@144,0x0,1
 # workspace=DP-2,1
 # monitor=DVI-D-1,1920x1080@60,1920x0,1
 # workspace=DVI-D-1,2
+#+end_src
 
-# Example :
-#monitor=eDP-1,1920x1080@60,0x0,1
-#monitor=eDP-1,transform,0
-#monitor=eDP-1,addreserved,10,10,10,10
-#workspace=eDP-1,1
+** Syadem Setup
+#+begin_src conf
+monitor=eDP-1,1920x1080@60,0x0,1
+workspace=eDP-1,1
+monitor=HDMI-A-1,preferred,1920x0,1
+workspace=HDMI-A-1,2
 #+end_src
 
 * STARTUP
