--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -486,7 +486,7 @@ bind = SUPERCTRL,Print,exec,$screenshot --area
 
 ** Image To Text
 #+begin_src conf
-bind = ControlSuperShift,S,exec,grim -g "$(slurp -d -c D1E5F4BB -b 1B232866 -s 00000000)" "tmp.png" && tesseract "tmp.png" - | wl-copy && rm "tmp.png"
+bind = SUPERSHIFTCTRL,S,exec,grim -g "$(slurp -d -c D1E5F4BB -b 1B232866 -s 00000000)" "tmp.png" && tesseract "tmp.png" - | wl-copy && rm "tmp.png"
 #+end_src
 
 ** Hyprland
