--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -6,9 +6,10 @@
 * TABLE OF CONTENT :TOC:
 - [[#output][OUTPUT]]
   - [[#example][Example]]
-  - [[#homeepitech-setup][Home/Epitech Setup]]
+  - [[#laptop-screen][Laptop Screen]]
   - [[#syadem-setup][Syadem Setup]]
-  - [[#test-setup][Test Setup]]
+  - [[#home-setup][Home Setup]]
+  - [[#default-setup][Default Setup]]
 - [[#startup][STARTUP]]
   - [[#desktop-portals][Desktop-Portals]]
   - [[#wallpaper][Wallpaper]]
@@ -56,9 +57,11 @@
 Configure your Display resolution, offset, scale and Monitors here, use `hyprctl monitors` to get the info.
 
 ~monitor = name,resolution,position,scale~
+or
+~monitor = description_from_hyprctl_monitors,resolution,position,scale~
 
 *Mirrored displays*
-If you want to mirror a display, add a ,mirror,[NAME] at the end of the monitor rule, examples:
+If you want to mirror a display, add a =,mirror,[NAME]= at the end of the monitor rule, examples:
 
 ~monitor = DP-3,1920x1080@60,0x0,1,mirror,DP-2~
 ~monitor = ,preferred,auto,1,mirror,DP-1~
@@ -69,36 +72,31 @@ If you want to mirror a display, add a ,mirror,[NAME] at the end of the monitor 
 ~monitor = eDP-1,addreserved,10,10,10,10~
 ~workspace = eDP-1,1~
 
-** Home/Epitech Setup
+** Laptop Screen
 #+begin_src conf
-# monitor = eDP-1,1920x1080@60,1920x0,1
-# workspace = eDP-1,2
-# monitor = HDMI-A-1,preferred,0x0,1
-# workspace = HDMI-A-1,1
-
-# monitor = HDMI-A-1,1920x1080@60,0x0,1
-
+monitor = eDP-1,1920x1080@60,0x0,1
+workspace = eDP-1,1
 #+end_src
 
 ** Syadem Setup
 #+begin_src conf
-monitor = eDP-1,1920x1080@60,0x0,1
-workspace = eDP-1,1
-monitor = HDMI-A-1,preferred,1920x0,1
-workspace = HDMI-A-1,2
+monitor = AOC Q3279WG5B 0x0000652C,preferred,1920x0,1
+workspace = AOC Q3279WG5B 0x0000652C,2
 #+end_src
 
-** Test Setup
+** TODO Home Setup
 #+begin_src conf
-# monitor = HDMI-A-1,preferred,auto,1
-# monitor = DP-2,1920x1080@144,0x0,1
-# workspace = DP-2,1
-# monitor = DVI-D-1,1920x1080@60,1920x0,1
-# workspace = DVI-D-1,2
+# monitor = HDMI-A-1,preferred,-19200x0,1
+# workspace = HDMI-A-1,1
+#+end_src
+
+** Default Setup
+#+begin_src conf
+monitor=,preferred,auto,1
 #+end_src
 
 * STARTUP
-=dbus-update-activation-environment...= , =--user import-environment...= and the script called =desktop-portals =  are found online and known to save time on laggy app on start and other good behaviors
+=dbus-update-activation-environment...= , =--user import-environment...= and the script called =desktop-portals=  are found online and known to save time on laggy app on start and other good behaviors
 
 ** Desktop-Portals
 #+begin_src conf
@@ -110,17 +108,15 @@ exec-once = ~/.config/hypr/scripts/desktop-portals.sh
 #exec-once = swaybg --output '*' --mode fill --image ~/.config/hypr/wallpapers/wallpaper.png &
 # exec-once = swww img ~/.config/hypr/wallpapers/wallpaper.jpg
 exec-once = swww img ~/Pictures/wallpapers/nature_blue_simplist_art.jpg
-exec-once = swww init; sww kill; sww init
+exec-once = swww init; swww kill; swww init
 #+end_src
-
 
 ** Notifications
 #+begin_src conf
 exec-once = ~/.config/hypr/scripts/notifications
 #+end_src
 
-** Status-Bar
-Execute waybar
+** Status-Bar/Waybar
 #+begin_src conf
 exec-once = ~/.config/hypr/scripts/statusbar
 #+end_src
@@ -136,7 +132,7 @@ exec = hyprshade auto
 #+end_src
 
 ** Bluetooth
-Make sure you have installed blueman
+Make sure you have installed =blueman=
 #+begin_src conf
 exec-once = blueman-applet
 #+end_src
